Working on jump bug

--- a/Tinville/static/css/designer_shop/styles.css
+++ b/Tinville/static/css/designer_shop/styles.css
@@ -155,3 +155,31 @@
 #resizeIcon {
     cursor: pointer;
 }
+
+ /* Tinville Orange : f46430
+/ * Tinville Gray : e7e5e6
+/ * Tinville Dark Gray: #5B595A */
+
+#shopEditorWindow {
+    box-shadow: 0px -2px 10px -4px  #616161;
+}
+
+.nav-pills>li.active>a {
+    background-color: #f46430;
+}
+
+.nav-pills>li>a {
+   color: #5B595A;
+}
+
+.nav-pills>li.active>a:hover {
+  background-color: #f44b16;
+}
+
+.nav-pills>li>a {
+   color: #5B595A;
+}
+
+.nav-pills>li>a:hover {
+   background-color: #e7e5e6;
+}
